--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,8 @@
 
 <div class="row text-center">
   <div class="col">
-    <app-hijo></app-hijo>
+    <app-hijo
+    ></app-hijo>
   </div>
 </div>
 
