--- a/src/app/contador/hijo/hijo.component.html
+++ b/src/app/contador/hijo/hijo.component.html
@@ -9,13 +9,11 @@
 </div>
 
 
-<!-- 
 <hr>
 
 <div class="row text-center">
   <div class="col">
     <app-nieto 
-      [contador]="contador" 
-      (contadorCambio)="resetNieto($event)" ></app-nieto>
+      ></app-nieto>
   </div>
-</div> -->
+</div>
